# bia-music-composer

./: .env.example  .gitignore  Dockerfile  LICENSE  README.md  add-google-cloud-ops-agent-repo.sh  pyproject.toml  setup_and_run.sh
.claude/: settings.local.json
gcp/: build_and_push.sh  cache_startup.sh  deploy_ui.sh  finetune_audio2audio_startup.sh  generate_audio2audio_startup.sh  generate_startup.sh  populate_model_cache.sh  run_and_watch.sh  run_direct.sh  run_finetune_audio2audio.sh  run_generate.sh  run_generate_audio2audio.sh  run_on_vm.sh  startup.sh
scripts/: annotate.py  finetune_audio2audio.py  finetune_audio2audio_direct.py  finetune_paired.py  generate.py  generate_audio2audio.py
ui/: Dockerfile  index.html  requirements.txt  server.py
