[project]
name = "bia-music-composer"
version = "0.1.0"
description = "Compose music like bia"
authors = [{ name = "Bianca Cheng", email = "bianca@chengcostanzo.com" }]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    # PyTorch dependencies for CUDA 12.8
    "torch~=2.8.0",
    "torchvision~=0.23.0",

    # Transformers and fine-tuning ecosystem
    "transformers>=4.51.0,<4.57.0",
    "accelerate~=1.12.0",
    # "torchcodec~=0.8.1",
    "peft~=0.18.0",
    "trl~=0.25.1",
    "bitsandbytes>=0.48.2",

    # HeartMuLa dependencies
    "torchaudio~=2.8.0",
    "torchtune==0.4.0",
    "soundfile>=0.12.1",
    "vector-quantize-pytorch==1.27.15",
    "heartlib",

    # Core ML/data libraries
    "datasets~=4.4.1",
    "evaluate~=0.4.6",
    "einops~=0.8.1",
    "scikit-learn~=1.7.2",
    "pandas~=2.3.3",
    "numpy~=2.3.5",

    # Utilities
    "python-dotenv~=1.2.1",
    "rdflib~=7.4.0",
    "huggingface-hub~=0.36.0",
    "boto3~=1.41.5",
    "requests~=2.32.5",
]

[dependency-groups]
dev = [
    "pytest>=9.0.1",
]

[tool.uv]
override-dependencies = [
    "numpy>=2.3.5",       # override heartlib's numpy==2.0.2 pin
    "transformers>=4.51.0,<4.57.0",  # 4.57.0 yanked: CUDA warmup bug breaks HeartMuLa loading
]

[tool.uv.sources]
heartlib = { git = "https://github.com/HeartMuLa/heartlib.git" }

# Define a named index for the PyTorch CUDA packages
#[[tool.uv.index]]
#name = "pytorch-cuda"
#url = "https://download.pytorch.org/whl/cu128"
#explicit = true

# Map specific packages to the named index
#[tool.uv.sources]
#torch = [
#  { index = "pytorch-cuda" },
#]
#torchvision = [
#  { index = "pytorch-cuda" },
#]
